changed package.json scripts to run both Google and Microsoft build/deploy

--- a/productivity-tools-extensions/package.json
+++ b/productivity-tools-extensions/package.json
@@ -6,14 +6,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
-    "google-build-dev": "webpack --progress --mode development --env verbose",
+    "google-build-dev": "webpack --config google-webpack.config.js --progress --mode development --env verbose",
     "microsoft-build-dev": "webpack --progress --mode development --env verbose",
-    "google-build-prod": "webpack --progress --mode production --env verbose",
+    "google-build-prod": "webpack  --config google-webpack.config.js --progress --mode production --env verbose",
     "microsoft-build-prod": "webpack --progress --mode production --env verbose",
-    "deploy-dev": "webpack --progress --mode development --env verbose --env upload",
-    "google-deploy-dev": "webpack --progress --mode development --env verbose --env upload",
+    "google-deploy-dev": "webpack --config google-webpack.config.js --progress --mode development --env verbose --env upload",
+    "microsoft-deploy-dev": "webpack --progress --mode development --env verbose --env upload",
+    "google-deploy-prod": "webpack --config google-webpack.config.js --progress --mode production --env verbose --env upload",
     "microsoft-deploy-prod": "webpack --progress --mode production --env verbose --env upload",
-    "google-deploy-prod": "webpack --progress --mode production --env verbose --env upload",
     "google-start": "webpack --config google-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
     "microsoft-start": "webpack --hot --watch --mode development --env verbose --env upload --env forceUpload",
     "test": "cross-env BABEL_ENV=test JEST_JUNIT_OUTPUT=./report.xml jest --coverage"
