--- a/productivity-tools-extensions/package.json
+++ b/productivity-tools-extensions/package.json
@@ -45,7 +45,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "eslint": "7.12.1",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
