--- a/productivity-tools-extensions/package.json
+++ b/productivity-tools-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
@@ -20,8 +20,6 @@
   },
   "dependencies": {
     "@ellucian/experience-extension-hooks": "2.2.1",
-    "@eui/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/4.5.0/umd/path_design_system_icons.tgz",
-    "@hedtech/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/4.5.0/umd/path_design_system.tgz",
     "classnames": "2.3.1",
     "gapi-script": "1.2.0",
     "prop-types": "15.7.2",
@@ -37,6 +35,8 @@
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
     "@ellucian/experience-extension": "2.2.1",
+    "@eui/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/4.5.0/umd/path_design_system_icons.tgz",
+    "@hedtech/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/4.5.0/umd/path_design_system.tgz",
     "babel-eslint": "10.1.0",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
@@ -44,8 +44,8 @@
     "dotenv-webpack": "7.0.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
-    "eslint": "7.12.1",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint": "7.27.0",
+    "eslint-plugin-import": "2.23.3",
     "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
