--- a/productivity-tools-extensions/package.json
+++ b/productivity-tools-extensions/package.json
@@ -19,10 +19,10 @@
     "test": "cross-env BABEL_ENV=test JEST_JUNIT_OUTPUT=./report.xml jest --coverage"
   },
   "dependencies": {
+    "@azure/msal-browser": "2.14.2",
     "@ellucian/experience-extension-hooks": "2.2.1",
-    "@microsoft/mgt-element": "^2.2.0",
-    "@microsoft/mgt-msal2-provider": "^2.2.0",
-    "@microsoft/mgt-react": "^2.2.0",
+    "@microsoft/mgt-components": "2.2.0",
+    "@microsoft/microsoft-graph-client": "2.2.1",
     "classnames": "2.3.1",
     "gapi-script": "1.2.0",
     "prop-types": "15.7.2",
@@ -40,7 +40,6 @@
     "@ellucian/experience-extension": "2.2.1",
     "@eui/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/4.5.0/umd/path_design_system_icons.tgz",
     "@hedtech/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/4.5.0/umd/path_design_system.tgz",
-    "@microsoft/microsoft-graph-client": "^2.2.1",
     "babel-eslint": "10.1.0",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
