--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -145,6 +145,7 @@
     "no-catch-shadow": "off",
     "no-confusing-arrow": "error",
     "no-continue": "error",
+    "no-debugger": "warn",
     "no-div-regex": "error",
     "no-duplicate-imports": "off",
     "no-else-return": "off",
