--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.0.3-beta",
+  "version": "1.0.4-beta",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
+  "private": true,
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
     "google-build-dev": "webpack --config google-webpack.config.js --progress --mode development --env verbose",
@@ -29,7 +30,7 @@
     "react-dom": "16.9.0",
     "react-intl": "2.8.0",
     "react-router-dom": "5.2.0",
-    "safe-html": "1.0.0",
+    "sanitize-html": "2.4.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
