--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.0.4-beta",
+  "version": "1.0.6",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
