Added OUTLOOK_USE_WEB_LINK env to use the deep link Added OUTLOOK_MESSAGE_TEMPLATE_URL to define a template for message URL Refactoring Microsoft authentication

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,10 @@
 # You can rename this file to .env, and run `npx experience-extension upload` to package and upload your extension to Experience
 
 EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
+
+# Optional to override the URL template used to open an Outlook email message
+#OUTLOOK_MESSAGE_TEMPLATE_URL='https://outlook.office.com/mail/inbox/id/{id}'
+
+# Optional to use the MS Graph API's webLink to open an Outlook email message.
+# Note, this is a deep direct link to the message. There is no navigation to the Inbox
+OUTLOOK_USE_WEB_LINK=true
