--- a/sample.env
+++ b/sample.env
@@ -7,4 +7,11 @@ EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 
 # Optional to use the MS Graph API's webLink to open an Outlook email message.
 # Note, this is a deep direct link to the message. There is no navigation to the Inbox
-OUTLOOK_USE_WEB_LINK=true
+#OUTLOOK_USE_WEB_LINK=true
+
+# Optional to use LOG_LEVEL to specify the loglevel to use for logging
+#LOG_LEVEL=debug
+
+# Optional to use LOG_LEVEL_PERSIST to denote using localStorage to remember loglevel.
+# This allows the use of browser storage to persist loglevel and change the loglevel without changing the .env value.
+#LOG_LEVEL_PERSIST=true
