--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
@@ -25,12 +25,15 @@
     "@microsoft/mgt-components": "2.2.0",
     "@microsoft/microsoft-graph-client": "2.2.1",
     "classnames": "2.3.1",
+    "idb-keyval": "6.0.3",
+    "loglevel": "1.8.0",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-intl": "2.8.0",
     "react-router-dom": "5.2.0",
     "sanitize-html": "2.4.0",
+    "string-template": "1.0.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
