--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,17 @@
 # You can rename this file to .env, and run `npx experience-extension upload` to package and upload your extension to Experience
 
 EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
+
+# Optional to override the URL template used to open an Outlook email message
+#OUTLOOK_MESSAGE_TEMPLATE_URL='https://outlook.office.com/mail/inbox/id/{id}'
+
+# Optional to use the MS Graph API's webLink to open an Outlook email message.
+# Note, this is a deep direct link to the message. There is no navigation to the Inbox
+#OUTLOOK_USE_WEB_LINK=true
+
+# Optional to use LOG_LEVEL to specify the loglevel to use for logging
+#LOG_LEVEL=debug
+
+# Optional to use LOG_LEVEL_PERSIST to denote using localStorage to remember loglevel.
+# This allows the use of browser storage to persist loglevel and change the loglevel without changing the .env value.
+#LOG_LEVEL_PERSIST=true
