Added W75 Drive and Calendar Cards

--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,8 @@ EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 
 # Optional to override the URL template used to open an Outlook email message
 #OUTLOOK_MESSAGE_TEMPLATE_URL='https://outlook.office.com/mail/inbox/id/{id}'
+# Optional to override the URL template used to open an Outlook email message
+#OUTLOOK_CALENDAR_TEMPLATE_URL='https://outlook.office.com/calendar/item/{id}'
 
 # Optional to use the MS Graph API's webLink to open an Outlook email message.
 # Note, this is a deep direct link to the message. There is no navigation to the Inbox
