--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.1.3",
-  "description": "Productivity Tools extensions",
+  "version": "1.1.4",
+  "description": "Microsoft Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
   "private": true,
@@ -17,55 +17,64 @@
     "microsoft-deploy-dev": "webpack --config microsoft-webpack.config.js --progress --mode development --env verbose --env upload",
     "microsoft-deploy-prod": "webpack --config microsoft-webpack.config.js --progress --mode production --env verbose --env upload",
     "microsoft-start": "webpack --config microsoft-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "w75_microsoft-build-dev": "webpack --config w75_microsoft-webpack.config.js --progress --mode development --env verbose",
+    "w75_microsoft-build-prod": "webpack --config w75_microsoft-webpack.config.js --progress --mode production --env verbose",
+    "w75_microsoft-deploy-dev": "webpack --config w75_microsoft-webpack.config.js --progress --mode development --env verbose --env upload",
+    "w75_microsoft-deploy-prod": "webpack --config w75_microsoft-webpack.config.js --progress --mode production --env verbose --env upload",
+    "w75_microsoft-start": "webpack --config w75_microsoft-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "w75_outlook-start": "webpack --config w75_outlook-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "w75_onedrive-start": "webpack --config w75_onedrive-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "w75_calendar-start": "webpack --config w75_calendar-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
     "test": "cross-env BABEL_ENV=test JEST_JUNIT_OUTPUT=./report.xml jest --coverage"
   },
   "dependencies": {
-    "@azure/msal-browser": "2.14.2",
+    "@azure/msal-browser": "2.26.0",
     "@ellucian/experience-extension-hooks": "github:ellucian-developer/experience-extension-hooks#1.0.0",
-    "@microsoft/mgt-components": "2.2.0",
+    "@microsoft/mgt-components": "2.5.2",
     "@microsoft/microsoft-graph-client": "2.2.1",
+    "moment": "2.29.3",
     "classnames": "2.3.1",
     "idb-keyval": "6.0.3",
     "loglevel": "1.8.0",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-intl": "2.8.0",
+    "react-intl": "5.25.1",
     "react-router-dom": "5.2.0",
-    "sanitize-html": "2.4.0",
+    "sanitize-html": "2.7.0",
     "string-template": "1.0.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/6.4.0/umd/path_design_system_icons.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/5.7.0/ellucian-experience-extension-5.7.0.tgz",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/6.4.0/umd/path_design_system.tgz",
+    "@babel/eslint-parser": "7.17.0",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/5.1.0/umd/path_design_system_icons.tgz",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/3.1.0/ellucian-experience-extension-3.1.0.tgz",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/5.1.0/umd/path_design_system.tgz",
-    "babel-eslint": "10.1.0",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
-    "dotenv-webpack": "7.0.2",
+    "dotenv-webpack": "7.1.1",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
-    "eslint": "7.27.0",
-    "eslint-plugin-import": "2.23.3",
-    "eslint-plugin-jest": "24.1.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
-    "expect": "26.6.2",
+    "enzyme-adapter-react-16": "1.15.6",
+    "eslint": "8.18.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "26.5.3",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-react": "7.30.1",
+    "jest": "28.1.2",
+    "jest-junit": "14.0.0",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0",
+    "expect": "28.1.1",
     "fs-extra": "9.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.5.3",
-    "jest-fetch-mock": "3.0.3",
-    "jest-junit": "12.0.0",
     "react-test-renderer": "16.9.0",
     "rewiremock": "3.14.3",
     "url-loader": "4.1.1",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0"
+    "jest-fetch-mock": "3.0.3"
   }
 }
