update to SDK 6.0.0

--- a/sample.env
+++ b/sample.env
@@ -15,3 +15,9 @@ EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 # Optional to use LOG_LEVEL_PERSIST to denote using localStorage to remember loglevel.
 # This allows the use of browser storage to persist loglevel and change the loglevel without changing the .env value.
 #LOG_LEVEL_PERSIST=true
+
+# The following are optional environment variables which can be used to setup your extension.
+# View 'Utilizing the Setup API' section of the readme.md for more details.
+# To utilize them, uncomment and fill out:
+# EXPERIENCE_EXTENSION_ENABLED=<true/false>
+# EXPERIENCE_EXTENSION_ENVIRONMENTS=<Tenant1,Tenant2> 
