--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
-node_modules
-.idea
-report.xml
-build/**
 .DS_Store
-*.log
 .env
-bak
-report.tap
-local
-.nyc_output/**/*
-coverage
-dist
-junit.xml
-server_report.xml
-client_report.xml
-tmp
-.vscode
 .env.*
-.webpack
+.eslintcache
+.vscode
 .serverless
+.webpack
+*.log
+build/**
+dist
+node_modules
