--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
@@ -15,67 +15,54 @@
     "google-build-prod": "webpack  --config google-webpack.config.js --progress --mode production --env verbose",
     "google-deploy-dev": "webpack --config google-webpack.config.js --progress --mode development --env verbose --env upload",
     "google-deploy-prod": "webpack --config google-webpack.config.js --progress --mode production --env verbose --env upload",
-    "google-start": "webpack --config google-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "google-watch-and-upload": "webpack --config microsoft-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "google-start": "webpack --config google-webpack.config.js serve --mode development --env verbose --env liveReload",
     "microsoft-build-dev": "webpack --config microsoft-webpack.config.js --progress --mode development --env verbose",
     "microsoft-build-prod": "webpack --config microsoft-webpack.config.js --progress --mode production --env verbose",
     "microsoft-deploy-dev": "webpack --config microsoft-webpack.config.js --progress --mode development --env verbose --env upload",
     "microsoft-deploy-prod": "webpack --config microsoft-webpack.config.js --progress --mode production --env verbose --env upload",
-    "microsoft-start": "webpack --config microsoft-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
-    "test": "cross-env BABEL_ENV=test JEST_JUNIT_OUTPUT=./report.xml jest --coverage"
+    "microsoft-watch-and-upload": "webpack --config microsoft-webpack.config.js --hot --watch --mode development --env verbose --env upload --env forceUpload",
+    "microsoft-start": "webpack --config microsoft-webpack.config.js serve --mode development --env verbose --env liveReload"
   },
   "dependencies": {
     "@azure/msal-browser": "2.14.2",
-    "@ellucian/experience-extension-hooks": "github:ellucian-developer/experience-extension-hooks#1.0.0",
     "@microsoft/mgt-components": "2.2.0",
     "@microsoft/microsoft-graph-client": "2.2.1",
-    "classnames": "2.3.1",
-    "idb-keyval": "6.0.3",
-    "loglevel": "1.8.0",
+    "classnames": "2.3.2",
+    "idb-keyval": "6.2.0",
+    "loglevel": "1.8.1",
     "prop-types": "15.7.2",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-intl": "2.8.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-intl": "5.12.5",
     "react-router-dom": "5.2.0",
-    "sanitize-html": "2.4.0",
+    "sanitize-html": "2.9.0",
     "string-template": "1.0.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.17.0",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@calm/eslint-plugin-react-intl": "1.4.1",
-    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/5.1.0/umd/path_design_system_icons.tgz",
-    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/3.1.0/ellucian-experience-extension-3.1.0.tgz",
-    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/5.1.0/umd/path_design_system.tgz",
-    "babel-eslint": "10.1.0",
+    "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/6.8.0/umd/path_design_system_icons.tgz",
+    "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/6.0.0/ellucian-experience-extension-6.0.0.tgz",
+    "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/6.8.0/umd/path_design_system.tgz",
     "babel-plugin-rewire": "1.2.0",
     "cross-env": "7.0.2",
-    "dotenv": "8.2.0",
-    "dotenv-webpack": "7.0.2",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
-    "eslint": "7.27.0",
-    "eslint-plugin-import": "2.23.3",
-    "eslint-plugin-jest": "24.1.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
+    "dotenv": "8.6.0",
+    "dotenv-webpack": "7.1.1",
+    "eslint": "8.32.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
     "expect": "26.6.2",
-    "fs-extra": "9.0.1",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "26.5.3",
-    "jest-fetch-mock": "3.0.3",
-    "jest-junit": "12.0.0",
-    "react-test-renderer": "16.9.0",
-    "rewiremock": "3.14.3",
-    "url-loader": "4.1.1",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0"
+    "webpack": "5.69.1",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.7.4"
   },
   "overrides": {
-    "json5": "2.2.3",
-    "jsonwebtoken": "9.0.0",
-    "moment": "2.29.4",
-    "nanoid": "3.3.4"
+    "ua-parser-js": "0.7.33"
   }
 }
