--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
@@ -58,11 +58,12 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
-    "webpack": "5.69.1",
+    "webpack": "5.76.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.7.4"
   },
   "overrides": {
-    "ua-parser-js": "0.7.33"
+    "ua-parser-js": "0.7.33",
+    "webpack": "5.76.1"
   }
 }
