--- a/w75_sample.env
+++ b/w75_sample.env
@@ -4,8 +4,6 @@ EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 
 # Optional to override the URL template used to open an Outlook email message
 #OUTLOOK_MESSAGE_TEMPLATE_URL='https://outlook.office.com/mail/inbox/id/{id}'
-# Optional to override the URL template used to open an Outlook email message
-#OUTLOOK_CALENDAR_TEMPLATE_URL='https://outlook.office.com/calendar/item/{id}'
 
 # Optional to use the MS Graph API's webLink to open an Outlook email message.
 # Note, this is a deep direct link to the message. There is no navigation to the Inbox
@@ -20,5 +18,7 @@ EXPERIENCE_EXTENSION_UPLOAD_TOKEN=<upload-token>
 
 # This optional environment variable is to allow configuration of the maximum number of messages fetched by the Outlook Card
 OUTLOOK_MAX_MESSAGE_COUNT=10
-# This optional environment variable is to allow configuration of whether to only fetch unread or not
+# This optional environment variable is to allow configuration of whether to only fetch unread or not { true | false }
 OUTLOOK_FETCH_UNREAD_ONLY=true
+# This optional environment variable is to allow incorporation of compose links into the Calendar and Mail cards { true | false }
+ALLOW_COMPOSE=false
